Agregando estilos y clase a un div

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practicando el Modelo de Caja en CSS</title>
     <!-- importa la hoja de estulos -->
+     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <!-- Crea un div con clase "mi-div" -->
+    <div class="mi-div">
+        <h1>Hola, Mundo!</h1>
+        <p>Este es un ejemplo para practicar el modelo de caja en CSS.</p>
 </body>
 </html>
